--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Your Trip - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -31,20 +31,21 @@
       <h1 class="display-4 fw-bold">Choose your next trip</h1>
       <p class="lead">Explore the world with comfort and confidence.</p>
       <form class="row g-2 justify-content-center mt-4">
-        <div class="col-md-2"><input type="text" class="form-control" placeholder="From" /></div>
-        <div class="col-md-2"><input type="text" class="form-control" placeholder="To" /></div>
-        <div class="col-md-2"><input type="number" class="form-control" placeholder="1 Passenger" /></div>
-        <div class="col-md-2"><button class="btn btn-primary w-100">Search</button></div>
+        <div class="col-md-2"><input type="text" class="form-control" placeholder="From"></div>
+        <div class="col-md-2"><input type="text" class="form-control" placeholder="To"></div>
+        <div class="col-md-2"><input type="number" class="form-control" placeholder="1 Passenger"></div>
+        <div class="col-md-2"><button class="btn btn-primary w-100" type="submit">Search</button></div>
       </form>
     </div>
   </header>
 
   <!-- DESTINATIONS -->
   <section class="container py-5">
+    <h2 class="text-center mb-4">Popular Destinations</h2>
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card bg-dark text-white border-0">
-          <img src="images/barcelona.jpg" class="card-img" alt="Barcelona" />
+          <img src="images/barcelona.jpg" class="card-img" alt="Barcelona">
           <div class="card-img-overlay d-flex flex-column justify-content-end">
             <h5 class="card-title">Barcelona</h5>
             <p class="card-text">Spain | €2240</p>
@@ -53,7 +54,7 @@
       </div>
       <div class="col-md-4">
         <div class="card bg-dark text-white border-0">
-          <img src="images/newyork.jpg" class="card-img" alt="New York" />
+          <img src="images/newyork.jpg" class="card-img" alt="New York">
           <div class="card-img-overlay d-flex flex-column justify-content-end">
             <h5 class="card-title">New York</h5>
             <p class="card-text">USA | €1990</p>
@@ -62,7 +63,7 @@
       </div>
       <div class="col-md-4">
         <div class="card bg-dark text-white border-0">
-          <img src="images/tokyo.jpg" class="card-img" alt="Tokyo" />
+          <img src="images/tokyo.jpg" class="card-img" alt="Tokyo">
           <div class="card-img-overlay d-flex flex-column justify-content-end">
             <h5 class="card-title">Tokyo</h5>
             <p class="card-text">Japan | €2540</p>
@@ -74,8 +75,8 @@
 
   <!-- TESTIMONIALS -->
   <section class="bg-light py-5">
+    <h2 class="text-center">What people say</h2>
     <div class="container text-center">
-      <h2>What people say</h2>
       <div class="row mt-4">
         <div class="col-md-6">
           <blockquote class="blockquote">
@@ -95,6 +96,7 @@
 
   <!-- FEATURES -->
   <section class="py-5">
+    <h2 class="text-center mb-4">Why Travel With Us</h2>
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
@@ -105,7 +107,7 @@
           </ul>
         </div>
         <div class="col-md-4 text-center">
-          <img src="images/tokyo.jpg" alt="Feature" class="img-fluid rounded" />
+          <img src="images/tokyo.jpg" alt="Feature" class="img-fluid rounded">
         </div>
         <div class="col-md-4">
           <ul class="list-unstyled">
@@ -120,11 +122,11 @@
 
   <!-- SUBSCRIBE -->
   <section class="text-white text-center py-5" style="background: url('images/paris.jpg') center/cover no-repeat;">
+    <h2>Subscribe</h2>
     <div class="container">
-      <h2>Subscribe</h2>
       <form class="row justify-content-center g-2 mt-3">
-        <div class="col-md-4"><input type="email" class="form-control" placeholder="Email" /></div>
-        <div class="col-md-2"><button class="btn btn-primary w-100">Subscribe</button></div>
+        <div class="col-md-4"><input type="email" class="form-control" placeholder="Email"></div>
+        <div class="col-md-2"><button class="btn btn-primary w-100" type="submit">Subscribe</button></div>
       </form>
     </div>
   </section>
@@ -135,7 +137,7 @@
     <div class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="images/rome.jpg" class="card-img-top" alt="Rome" />
+          <img src="images/rome.jpg" class="card-img-top" alt="Rome">
           <div class="card-body">
             <h5 class="card-title">A week in Rome</h5>
             <p class="card-text">Top spots and how to enjoy them all in 7 days.</p>
@@ -145,7 +147,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="images/london.jpg" class="card-img-top" alt="London" />
+          <img src="images/london.jpg" class="card-img-top" alt="London">
           <div class="card-body">
             <h5 class="card-title">Budget London</h5>
             <p class="card-text">Travel smart in one of the most expensive cities.</p>
@@ -155,7 +157,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="images/istanbul.jpg" class="card-img-top" alt="Istanbul" />
+          <img src="images/istanbul.jpg" class="card-img-top" alt="Istanbul">
           <div class="card-body">
             <h5 class="card-title">Istanbul secrets</h5>
             <p class="card-text">Find the hidden gems of this ancient city.</p>
@@ -165,7 +167,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="images/berlin.jpg" class="card-img-top" alt="Berlin" />
+          <img src="images/berlin.jpg" class="card-img-top" alt="Berlin">
           <div class="card-body">
             <h5 class="card-title">Berlin nightlife</h5>
             <p class="card-text">Clubs, history and culture mix after dark.</p>
@@ -178,9 +180,10 @@
 
   <!-- APP DOWNLOAD -->
   <section class="container py-5">
+    <h2 class="text-center mb-4">Get Our App</h2>
     <div class="row align-items-center">
       <div class="col-md-6">
-        <img src="images/paris.jpg" class="img-fluid rounded" alt="App" />
+        <img src="images/paris.jpg" class="img-fluid rounded" alt="App">
       </div>
       <div class="col-md-6">
         <h3>Download our App</h3>
@@ -193,24 +196,25 @@
 
   <!-- MAP -->
   <section class="container-fluid p-0">
-    <iframe src="https://maps.google.com/maps?q=paris&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="300" style="border:0;"></iframe>
+    <h2 class="text-center mt-4">Our Location</h2>
+    <iframe src="https://maps.google.com/maps?q=paris&t=&z=13&ie=UTF8&iwloc=&output=embed" style="width: 100%; height: 300px; border:0;"></iframe>
   </section>
 
   <!-- CONTACT -->
   <section class="container py-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
     <div class="row">
       <div class="col-md-6">
-        <h4>Contact Us</h4>
         <p>Email: hello@trip.com</p>
         <p>Phone: +44 123 456 789</p>
       </div>
       <div class="col-md-6">
         <form>
           <div class="row g-2">
-            <div class="col-md-6"><input type="text" class="form-control" placeholder="First name" /></div>
-            <div class="col-md-6"><input type="text" class="form-control" placeholder="Last name" /></div>
+            <div class="col-md-6"><input type="text" class="form-control" placeholder="First name"></div>
+            <div class="col-md-6"><input type="text" class="form-control" placeholder="Last name"></div>
           </div>
-          <input type="email" class="form-control my-2" placeholder="Email" />
+          <input type="email" class="form-control my-2" placeholder="Email">
           <textarea class="form-control my-2" rows="3" placeholder="Message"></textarea>
           <button class="btn btn-primary" type="submit">Submit</button>
         </form>
