--- a/destinations.html
+++ b/destinations.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Your Trip - Destinations</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -29,7 +29,7 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/paris.jpg" class="card-img-top" alt="Paris" />
+          <img src="images/paris.jpg" class="card-img-top" alt="Paris">
           <div class="card-body">
             <h5 class="card-title">Paris</h5>
             <p class="card-text">Visit the iconic Eiffel Tower and explore romantic streets.</p>
@@ -41,7 +41,7 @@
 
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/rome.jpg" class="card-img-top" alt="Rome" />
+          <img src="images/rome.jpg" class="card-img-top" alt="Rome">
           <div class="card-body">
             <h5 class="card-title">Rome</h5>
             <p class="card-text">Discover ancient ruins and enjoy authentic Italian cuisine.</p>
@@ -53,7 +53,7 @@
 
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/berlin.jpg" class="card-img-top" alt="Berlin" />
+          <img src="images/berlin.jpg" class="card-img-top" alt="Berlin">
           <div class="card-body">
             <h5 class="card-title">Berlin</h5>
             <p class="card-text">Experience modern culture and historical landmarks.</p>
@@ -65,7 +65,7 @@
 
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/london.jpg" class="card-img-top" alt="London" />
+          <img src="images/london.jpg" class="card-img-top" alt="London">
           <div class="card-body">
             <h5 class="card-title">London</h5>
             <p class="card-text">See Big Ben, Buckingham Palace, and shop on Oxford Street.</p>
@@ -77,7 +77,7 @@
 
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="images/istanbul.jpg" class="card-img-top" alt="Istanbul" />
+          <img src="images/istanbul.jpg" class="card-img-top" alt="Istanbul">
           <div class="card-body">
             <h5 class="card-title">Istanbul</h5>
             <p class="card-text">Explore East and West in one city, rich in culture and flavor.</p>
