--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Choose Your Trip - Contact</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -32,20 +32,20 @@
         <p>📍 Tallinn, Estonia</p>
         <p>📧 hello@trip.com</p>
         <p>📞 +372 5555 5555</p>
-        <iframe src="https://maps.google.com/maps?q=Tallinn&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="300" style="border:0;"></iframe>
+        <iframe style="width: 100%; height: 300px; border:0;" src="https://maps.google.com/maps?q=Tallinn&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"></iframe>
       </div>
       <div class="col-md-6">
         <form>
           <div class="row g-2">
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="First Name" required />
+              <input type="text" class="form-control" placeholder="First Name" required>
             </div>
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Last Name" required />
+              <input type="text" class="form-control" placeholder="Last Name" required>
             </div>
           </div>
-          <input type="email" class="form-control my-3" placeholder="Email" required />
-          <input type="text" class="form-control mb-3" placeholder="Subject" />
+          <input type="email" class="form-control my-3" placeholder="Email" required>
+          <input type="text" class="form-control mb-3" placeholder="Subject">
           <textarea class="form-control mb-3" rows="4" placeholder="Your Message" required></textarea>
           <button class="btn btn-primary" type="submit">Send Message</button>
         </form>
